@@ -74,7 +74,7 @@ namespace JSC {
     v(bool, showDisassembly, false) \
     v(bool, showDFGDisassembly, false) \
     v(bool, showAllDFGNodes, false) \
-    \
+    v(bool, dumpBytecodeAtDFGTime, false) \
     v(bool, printEachOSRExit, false) \
     \
     v(bool, enableProfiler, false) \
